--- a/{{ cookiecutter.repo_name }}/notebooks/brake_emi_workflow.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/brake_emi_workflow.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Brake Emission Modeling"
+    "{% if cookiecutter.create_notebook == 'Yes' %}",
+    "# Brake Emission Modeling",
+    "{% endif %}"
    ]
   },
   {
