--- a/{{ cookiecutter.repo_name }}/notebooks/brake_emi_workflow.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/brake_emi_workflow.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{% if cookiecutter.create_notebook == 'Yes' %}",
-    "# Brake Emission Modeling",
-    "{% endif %}"
+    "# Brake Emission Modeling"
    ]
   },
   {
